# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("PinAuthServiceFuzzTest") {
  module_out_path = "useriam/pin_auth"
  fuzz_config_file = "../pinauthservice_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "iam_fuzz_test.cpp",
    "pin_auth_service_fuzzer.cpp",
  ]

  deps = [
    "../../../frameworks:pinauth_ipc",
    "../../../services:pinauthservice_source_set",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "drivers_interface_pin_auth:libpin_auth_proxy_1.0",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "../../../frameworks:pinauth_ipc_config",
    "../../../common:iam_log_config",
    "../../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}
